# MLRL-Boomer

./: .changelog-bugfix.md  .changelog-feature.md  .clang-format  .git-changes  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yaml  .version-cpp  .yamlfix.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CPPLINT.cfg  LICENSE.md  LICENSE.txt  Makefile  README.md  build  build.bat  compile_cython.sh  config.yml  debugFlags  install_venv.sh  jobs_heuristics.sh  master_jobs.sh  peak_label.sh  pyproject.toml  slurm.sh
cpp/: .cpplint.cfg  .gitignore  meson.build  meson.options
cpp/mlrl/boosting/: meson.build
cpp/mlrl/common/: meson.build
cpp/mlrl/seco/: meson.build
cpp/subprojects/: .gitignore  xsimd.wrap
cpp/subprojects/boosting/: meson.build
cpp/subprojects/common/: meson.build  meson.options
cpp/subprojects/seco/: meson.build  meson.options
python/: .cython-lint.toml  .gitignore  .version-python  args.py  bbc_cv.py  main.py  main_boomer.py  main_boomer_bbc_cv.py  main_boomer_plots.py  main_generate_synthetic_data.py  main_jrip.py  main_seco.py  main_seco_bbc_cv.py  main_xgboost.py  main_xgboost_bbc_cv.py  meson.build  parameter_tuning.py  plot_loss_curves.py  plots.py  requirements.txt  runnables.py  setup.py
python/boomer/: __init__.py  bbc_cv.py  data.py  evaluation.py  experiments.py  io.py  learners.py  losses.py  measures.py  parameters.py  persistence.py  plots.py  printing.py  training.py
python/boomer/algorithm/: __init__.py  _arrays.pxd  _example_based_losses.pxd  _example_based_losses.pyx  _example_wise_losses.pxd  _example_wise_losses.pyx  _head_refinement.pxd  _head_refinement.pyx  _heuristics.pxd  _heuristics.pyx  _label_wise_averaging.pxd  _label_wise_averaging.pyx  _label_wise_losses.pxd  _label_wise_losses.pyx  _label_wise_measue.pyx  _label_wise_measure.pxd  _label_wise_measure.pyx  _losses.pxd  _losses.pyx  _macro_losses.pyx  _math.pxd  _model.pxd  _model.pyx  _pruning.pxd  _pruning.pyx  _random.pxd  _random.pyx  _rule_induction.pxd  _rule_induction.pyx  _shrinkage.pyx  _sub_sampling.pxd  _sub_sampling.pyx  _utils.pxd  boomer.py  coverage_losses.pxd  coverage_losses.pyx  differentiable_losses.pxd  differentiable_losses.pyx  example_wise_losses.pxd  example_wise_losses.pyx  (+43 more)
python/boomer/baselines/: __init__.py  binary_relevance.py  problem_transformation.py  xgboost.py  xgboost_br.py
python/boomer/boosting/: _blas.pxd  _blas.pyx  _lapack.pxd  _lapack.pyx  _math.pxd  boosting_learners.py  differentiable_losses.pxd  differentiable_losses.pyx  example_wise_losses.pxd  example_wise_losses.pyx  example_wise_rule_evaluation.pxd  example_wise_rule_evaluation.pyx  example_wise_statistics.pxd  example_wise_statistics.pyx  gradient_statistics.pxd  gradient_statistics.pyx  head_refinement.pxd  head_refinement.pyx  label_wise_losses.pxd  label_wise_losses.pyx  label_wise_rule_evaluation.pxd  label_wise_rule_evaluation.pyx  label_wise_statistics.pxd  label_wise_statistics.pyx  losses.pxd  losses.pyx  losses_example_wise.pxd  losses_example_wise.pyx  losses_label_wise.pxd  losses_label_wise.pyx  model.pxd  output.pxd  output.pyx  post_processing.pxd  post_processing.pyx  rule_evaluation_example_wise.pxd  rule_evaluation_example_wise.pyx  rule_evaluation_label_wise.pxd  rule_evaluation_label_wise.pyx  shrinkage.pxd  (+7 more)
python/boomer/common/: _arrays.pxd  _data.pxd  _indices.pxd  _measures.pxd  _predictions.pxd  _random.pxd  _rule_evaluation.pxd  _sparse.pxd  _tuples.pxd  _types.pxd  arrays.py  binning.pxd  binning.pyx  head_refinement.pxd  head_refinement.pyx  input.pxd  input.pyx  input_data.pxd  input_data.pyx  learners.py  losses.pxd  losses.pyx  model.pxd  model.py  model.pyx  output.pxd  output.pyx  post_processing.pxd  post_processing.pyx  prediction.pxd  prediction.pyx  pruning.pxd  pruning.pyx  rule_evaluation.pxd  rule_evaluation.pyx  rule_induction.pxd  rule_induction.pyx  rule_learners.py  rule_refinement.pxd  rules.pxd  (+21 more)
python/boomer/seco/: coverage_losses.pxd  coverage_losses.pyx  coverage_statistics.pxd  coverage_statistics.pyx  head_refinement.pxd  head_refinement.pyx  heuristics.pxd  heuristics.pyx  label_wise_averaging.pxd  label_wise_averaging.pyx  label_wise_rule_evaluation.pxd  label_wise_rule_evaluation.pyx  label_wise_statistics.pxd  label_wise_statistics.pyx  lift_functions.pxd  lift_functions.pyx  model.pxd  output.pxd  output.pyx  rule_evaluation_label_wise.pxd  rule_evaluation_label_wise.pyx  seco_learners.py  statistics.pxd  statistics.pyx  statistics_label_wise.pxd  statistics_label_wise.pyx  stopping.pxd  stopping.pyx  stopping_criteria.pxd  stopping_criteria.pyx
python/boomer/xgboost/: __init__.py  xgboost_br.py
python/boosting/: _blas.pxd  boosting_learners.py  losses_example_wise.pxd  losses_example_wise.pyx  losses_label_wise.pxd  model.pxd  output.pxd  output.pyx  post_processing.pxd  rule_evaluation_example_wise.pxd  rule_evaluation_example_wise.pyx  rule_evaluation_label_wise.pxd  statistics_example_wise.pxd  statistics_example_wise.pyx  statistics_label_wise.pxd  statistics_label_wise.pyx
python/boosting/cython/: losses_example_wise.pxd  losses_example_wise.pyx  losses_label_wise.pxd  losses_label_wise.pyx  model.pxd  output.pxd  output.pyx  post_processing.pxd  rule_evaluation_example_wise.pxd  rule_evaluation_example_wise.pyx  rule_evaluation_label_wise.pxd  sampling.pxd  sampling.pyx  statistics_example_wise.pxd  (+3 more)
python/common/: _arrays.pxd  _data.pxd  binning.pxd  input.pxd  model.pxd  output.pxd  output.pyx  rule_induction.pxd  rule_induction.pyx  rule_learners.py  sampling.pxd  stopping.pxd  thresholds.pxd  thresholds_approximate.pxd  thresholds_approximate.pyx  thresholds_exact.pxd
python/seco/: head_refinement.pxd  heuristics.pxd  model.pxd  output.pxd  output.pyx  rule_evaluation_label_wise.pxd  rule_evaluation_label_wise.pyx  seco_learners.py  statistics_label_wise.pxd  statistics_label_wise.pyx  stopping.pxd
python/testbed/: bbc_cv.py  data.py  evaluation.py  experiments.py  parameters.py  printing.py  training.py
python/tests/: conftest.py
(+6330 files in other folders)
