[metadata]
name = mlrl-boomer
version = 0.7.0
description = A scikit-learn implementation of BOOMER - an algorithm for learning gradient boosted multi-label classification rules
author = Michael Rapp
author_email = michael.rapp.ml@gmail.com
url = https://github.com/mrapp-ke/Boomer
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    machine learning
    scikit-learn
    multi-label classification
    rule learning
    gradient boosting
platforms =
    linux-x86_64

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.7
install_requires =
    mlrl-common == 0.7.0

[options.package_data]
* = *.so*
